I added a workaround solution to fix the overlapping text

--- a/style.css
+++ b/style.css
@@ -347,7 +347,7 @@
 
 		.main {
 			background-color: #141414;
-			padding: 0 10rem 0 0;
+			padding: 0 20rem 0 0;
 			z-index: 10;
 
 		}
@@ -415,43 +415,75 @@
 
 		/* Favorite projects styling */
 		.projects {
-			margin-top: 1000px;
-			z-index: 1;
-			background-color: #141414;
-
-			display: flex;
+			background: #141414;
+			display:flex;
 			flex-direction: column;
-			align-items: center;
-			height: 90vh;
-
-			
-
-
+			align-items:center;
+			height: 100vh;
 		}
 
-		.projects h1 {
-			
+		.projects h3{
 
-			background-size: 100%;
-			z-index: 1;
-			margin-bottom: 20rem;
-			font-size: 4rem;
 			background-color: #ff8177;
-			background-image: linear-gradient(#de6262 , #ffb88c);
+			background-image: linear-gradient(to right, #ff8177 0%,
+				#ff867a 0%, #ff8c7f 100%);
+			background-size: 100%;
+			margin-bottom: 5rem;
+			font-size: 2.5rem;
 			-webkit-background-clip: text;
 			-moz-background-clip: text;
 			-webkit-text-fill-color: transparent;
 			-moz-text-fill-color: transparent;
+		}
+
+		/* When the screen gets to small the pages overlap so we need to fix this */
+		@media screen and (max-height: 1000px) {
+
+			.projects {
+			margin-top: 12rem;
+			}
 
 		}
 
-		.projects__container {
-			display: flex;
-			justify-content: center;
-			flex-wrap;
-		}
+		/* When the screen gets to small the pages overlap so we need to fix this */
+		@media screen and (max-height: 800px) {
 
+			.projects {
+			margin-top: 20rem;
+			margin-bottom: 20rem;
+			}
 
+		}		
+
+		/* When the screen gets to small the pages overlap so we need to fix this */
+		@media screen and (max-height: 600px) {
+
+			.projects {
+			margin-top: 32rem;
+			margin-bottom: 32rem;
+			}
+
+		}		
+
+			/* When the screen gets to small the pages overlap so we need to fix this */
+		@media screen and (max-height: 400px) {
+
+			.projects {
+			margin-top: 39rem;
+			margin-bottom: 39rem;
+			}
+
+		}		
+
+				/* When the screen gets to small the pages overlap so we need to fix this */
+		@media screen and (max-height: 250px) {
+
+			.projects {
+			margin-top: 45rem;
+			margin-bottom: 45rem;
+			}
+
+		}		
 
 		/* Make the picture a little smaller when screen gets smaller 
 		 * to avoid any overflow from happening */
